app/assets/stylesheets/static_pages.css.scss
// Place all the styles related to the StaticPages controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/
body {
  background-color: #ececec;
}

h1 {
  font-size: 37px;
}

h2 {
  font-size: 31px;
}

h5 {
  font-size: 20px;
}

h6 {
  font-size: 16px;
}

p {
  font-size: 16px;
  line-height: 22px;
}

td {
  padding: 10px 50px 0 10px;
}

.container {
  -webkit-box-shadow:  1px 1px 15px 10px rgba(0, 0, 0, .1);      
  box-shadow:  1px 1px 15px 10px rgba(0, 0, 0, .1);
  padding: 20px;
  background-color: white;
  // width: 980px;
}

.dropdown-submenu li > a {
  text-align: left;
}

.dropdown-menu {
  width: auto;
}

.dropdown-submenu li{
  width: auto;
  border-left: none !important;
}

.dropdown li{
  width: auto;
  border-left: none !important;
}

.navbar {
  margin-top: 20px;
  font-weight: 500;
}

.nav li {
  border-left: 1px solid #2a66af;
  height: 30px;
}

.nav li:first-child {
  border-left: transparent;
}

.nav li > a {
  margin-top: -5px;
}

.socialmedia {
  background-image:url('socialmedia-btn.png');
  background-repeat: no-repeat;
  width: 133px;
  height: 53px;
  position:relative;
  bottom: 10px;
    h6 {
      font-size: 12px;
      margin-bottom: -5px;
      color: #0f53a5;
      line-height: 15px;
    }
    img {
      margin-top: 9px;
    }
}

.welcome-text {
  text-align: center;
  color: #0f53a5;
  font-family: Cambria, Georgia, serif;
    p {
  	  line-height: 2em;
  	  font-size: 1.2em;
    }
}

#left-welcome {
  text-align: left;
  color: #0f53a5;
  font-family: Cambria, Georgia, serif;
    p {
      line-height: 2em;
      font-size: 1.2em;
    }
}

.pagetitle {
  color: #2a66af;
  font-family: Cambria, Georgia, serif;
  font-size: 2.3em;
  text-align: center;
  font-style: italic;
  display: block;
  margin-top: 20px;
  display: block;
  position: relative;
  text-decoration: underline !important;
}

.green-pagetitle {
  color: #008000;
  font-family: Cambria, Georgia, serif;
  font-size: 2.3em;
  text-decoration: underline;
  text-align: center;
}

.subheader {
  color: #0f53a5;
  text-align: justify;
  margin-top: 25px;
}

.content-container {
	color: #2a66af;
	border: 1px solid #2a66af;
	border-radius: 13px;
	padding: 50px;
  margin-top: 55px;
  margin-bottom: -5px;
  position: relative;
  display: inline-block;
  text-align: justify;
    img {
      display: inline-block;
      vertical-align: middle;
    }

    h3 {
      display: inline-block;
    }

    h4 {
      text-align: center;
    }   

    li { 
      font-size: 16px;
      line-height: 22px;
    } 

    a {
      color: #2a66af;
    }
}

.content-container-first {
  color: #2a66af;
  border: 1px solid #2a66af;
  border-radius: 13px;
  padding: 50px;
  margin-top: 70px;
  margin-bottom: 35px;
  position: relative;
  display: inline-block;
  text-align: justify;
    img {
      display: inline-block;
      vertical-align: middle;
    }

    h3 {
      display: inline-block;
    }
    h4 {
      text-align: center;
    }   

    li { 
      font-size: 16px;
      line-height: 22px;
    } 
}

.nostyle {
  list-style-type: none;
}

.green-content-container {
  color: #008000;
  border: 1px solid #008000;
  border-radius: 13px;
  padding: 50px;
  margin-top: 35px;
  margin-bottom: 35px;
  position: relative;
    img {
      display: inline-block;
      vertical-align: middle;
    }

    h3 {
      display: inline-block;
      color: #008000;
    }
}

.contact-container {
  color: #2a66af;
  border: 1px solid #2a66af;
  border-radius: 13px;
  padding: 50px;
  padding-top: 25px;
  margin-top: 55px;
  margin-bottom: -5px;
  position: relative;
  overflow: hidden;
  text-align: justify;
    img.center {
      display: block;
      margin-left: auto;
      margin-right: auto;
    }

    h3 {
      text-align: center;
      margin-bottom: 25px;
    }
    h4 {
      text-align: center;
    }

    li {
      font-size: 16px;
      line-height: 22px;
    }

    h6 {
      margin-bottom: 1px;
    }

    a {
      color: #2a66af;
    }
}

#rothenburg {
  margin-top: 80px;
}

#brinker {
  margin-top: 110px;
}

#marsha {
  margin-top: 150px;
}

#amenities {
  margin-top: 40px;
}

.imagecolumn {
  width: 200px;
  text-align: justify;
}

.leftcolumn {
  width: 145px;
}

.rightcolumn {
  width: 250px;
  text-align: justify;
}

.centered {
  text-align: center;
  margin-top: 20px;
  margin-bottom: 20px;
}

.mailboxphoto {
  margin-top: 35px;
  margin-bottom: 35px;
}

.float-right {
  float: right !important;
  padding: 20px;
}

.float-left {
  float: left !important;
  padding: 20px;
}

table.gadget {
  text-align: center !important;
  display: inline-block;
}

.footer {
  position: relative;
  bottom: 0px;
  margin-top: 100px;
  margin-left: 70px;
  margin-right: 70px;
  text-align: justify;
    p {
      font-size: 10px;
      color: #6d6d6d;
    }
    h5 {
      color: #0f53a5;
    }
}

